--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "corsproxy": "^1.5.0",
     "firebase": "^10.8.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
